apply code policy